use JavaScript modules

--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta charset="utf-8">
     <title>Ceptre Web Player</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="view.js" defer></script>
-    <script src="ceptre_parser.js" defer></script>
-    <script src="ceptre_engine.js" defer></script>
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="./src/style.css" type="text/css">
+    <script type="module" src="./src/main.js"></script>
     <script src="lib/filter.js"></script>
     <script src="lib/naturalNumbers.js"></script>
     <script src="lib/math.js"></script>
